some SEO improvements
removed duplicate descriptions
improved Headings

--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset="utf-8">
 	<title>Commerce Experts | Haftungsausschluss</title>
-	<meta name="description" content="Haftungsausschluss bei der Commerce Experts UG.">
+	<meta name="description" content="Haftungsausschluss der Commerce Experts UG.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
