--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
 	<meta charset="utf-8">
 	<title>Commerce Experts | Data driven Commerce</title>
-	<meta name="description" content="Die Commerce Experts UG mit Sitz in Pforzheim ist ein Technologieberatungs- und Softwarehaus, dass sich auf die Umsetzung komplexer datengetriebener Multichannel Projekte spezialisiert hat.">
+	<meta name="description" content="Die Commerce Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Umsetzung komplexer datengetriebener Projekte im digitalen Handel spezialisiert hat.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
@@ -212,7 +212,7 @@
                         <h2>Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span></h2>
                     </div>
 					<hr>
-					<div class="lead">Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im digitalen Handel.</div>
+					<div class="lead"><h2>Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im digitalen Handel.</h2></div>
 					<div class="row">
 						<!-- Start Profile -->
 						<div class="span4 profile">
