--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Commerce Experts | Data driven Commerce</title>
-	<meta name="description" content="Die Commerce Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Umsetzung komplexer datengetriebener Projekte im digitalen Handel spezialisiert hat.">
+	<meta name="description" content="Die Commerce Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Projekte im digitalen Handel spezialisiert hat.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
