made some SEO omportant changes
Keywords, Headings, Footer, internal URLs

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="de">
 <head>
 	<meta charset="utf-8">
-	<title>Commerce Experts | Data driven Commerce</title>
-	<meta name="description" content="Die Commerce Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Projekte im digitalen Handel spezialisiert hat.">
+	<title>Commerce-Experts | Data-Driven Multichannel E-Business</title>
+	<meta name="description" content="Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat.">
 	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
-    <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, E-Commerce, Data Driven Commerce, On-Site Search, Guided Selling, Personalization, Recommendation, Pforzheim"/>
+    <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, Data-Driven, E-Commerce, Digitaler-Handel, E-Business, On-Site-Search, Guided Selling, Personalisierung, Recommendation-Engine, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
     <meta name="robots" content="index, follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
@@ -71,7 +71,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span4">
-					<a href="#home" class="logo"><img src="img/CXP-Commerce-Experts-Logo.png" alt="commerce experts logo"></a>
+					<a href="#home" class="logo"><img src="img/CXP-Commerce-Experts-Logo.png" alt="commerce-experts"></a>
 				</div>
 				<!-- Navigation -->
 				<nav id="topnav" class="span8">
@@ -91,7 +91,7 @@
 				<div class="span12">
 					<div id="slidecaption">
 						Ihre <span class="color-text">Experten</span> für den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption"><h1>Wir ebnen Wege für unsere Kunden & Partner beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Handel.</h1></div>
+						<div class="sub-caption"><h1>Für unsere Kunden & Partner ebnen wir Wege beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Multichannel Handel</h1></div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
@@ -105,7 +105,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="span4">
-						<a href="#home" class="logo"><img src="img/Commerce-Experts-Logo.png" alt="commerce-experts"></a>
+						<a href="#home" class="logo"><img src="img/Commerce-Experts-Logo.png" alt="commerce-experts Data-Driven Multichannel E-Commerce"></a>
 					</div>
 					<div class="span8">
 						<ul id="fluid-nav" class="fluid-navigation visible-desktop">
@@ -128,19 +128,19 @@
 			<div class="container">
 				<div class="row">
 					<div class="span12">
-						<div class="title"><span class="color-text">COMMERCE </span>EXPERTS</div>
-                        <div class="sub-caption"><h2>Wir stehen für qualitativ hochwertige datengetriebene Projekte mit hohem Investitionsschutz <br>für Ihren unternehmerischen Erfolg im digitalen Handel.</h2>
+						<div class="title">Was <span class="color-text">wir </span>tun</div>
+                        <div class="sub-caption"><h2>Commerce-Experts steht für qualitativ hochwertige datengetriebene Projekte mit hohem <br>Investitionsschutz für Ihren unternehmerischen Erfolg im digitalen Handel.</h2>
                         <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.<br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
                         </div><p></p>
 						
 						<div class="row slider-services">
 							<div class="span8">
-								<img src="img/commerce-experts-ecosystem.png" alt="commerce experts data driven commerce ecosystem">
+								<img src="img/commerce-experts-ecosystem.png" alt="Data-Driven Multichannel E-Commerce">
 							</div>
 							<div class="span4">
 								<!-- Start Services List -->
 								<div class="services">
-									<div class="services-title hidden-tablet">Kompetenzen</div>
+									<div class="services-title hidden-tablet"><h3>Kompetenzen</h3></div>
 									<ul class="services-list">
 										<li>Onsite Search & Navigation</li>
                                         <li>Konversion Optimierung</li>
@@ -148,7 +148,7 @@
                                         <li>Go-to-Market Strategy</li>
 										
 									</ul>
-                                    <div class="services-title hidden-tablet">Technologien</div>
+                                    <div class="services-title hidden-tablet"><h3>Technologien</h3></div>
 									<ul class="services-list">										
                                         <li>Guided Selling & Personalisierung</li>
                                         <li>Infrastruktur & Hosting</li>
@@ -160,22 +160,22 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h5>Data Driven Commerce</h5>
+								<h2>Data Driven Commerce</h2>
 								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung für eine zielorientierte und kanalübergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h5>Konversion Optimierung</h5>
+								<h2>Konversion Optimierung</h2>
 								<p>Konversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles daten getriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h5>Application Management</h5>
+								<h2>Application Management</h2>
 								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware als auch Ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-                                <h5>Go-to-Market Strategy</h5>
+                                <h2>Go-to-Market Strategy</h2>
 								<p>Sie suchen einen kompetenten und verlässlichen Partner für den Vertrieb Ihrer Software-Lösungen im Europäischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie die langjährige Beziehungen zu Händlern und Agenturen bildet die Grundlage für den schnellen Vertriebserfolg während der Wachstumsphase.</p> 								
 							</div>
 						</div>
@@ -194,7 +194,7 @@
 					<div class="span12">
 						<div class="vertical-text">
 							<div class="parallax-title">
-                                <h2>Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an E-Business-Projekten die begeistern</h2>
+                                <h2>Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                         Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span>
                     </div>
 					<hr>
-					<div class="lead"><h2>Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im digitalen Handel.</h2></div>
+					<div class="lead"><h2 style="font-size:0.5em">Commerce-Experts - Die gebündelte Expertise aus mehr als 35 Jahren Erfahrung im datengetriebenen digitalen Handel.</h2></div>
 					<div class="row">
 						<!-- Start Profile -->
 						<div class="span4 profile">
@@ -345,13 +345,13 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 						<strong>Standort:</strong> <span class="white-text">Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</span></p>
 					</div>
 					<div class="span4">
-						<h5>Über Commerce Experts</h5>
-						<p>Technologische Perfektion und datengetriebene Entscheidungen sind das Rückgrat einer erfolgreichen E-Business Lösung. Darum beherrschen wir alle führenden Software-Lösungen und passen diese exakt auf die Bedürfnisse unserer Kunden an.</p>
+						<h5>Über Commerce-Experts</h5>
+						<p>Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das Rückgrat einer erfolgreichen E-Business Lösung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
                         <ul style="list-style-type:none">
-                            <li><a href="index.html"><span class="trigger">Startseite</span></a></li>
+                            <li><a href="http://www.commerce-experts.com"><span class="trigger">Startseite</span></a></li>
                             <li><a href="impressum.html"><span class="trigger">Impressum</span></a></li>                              
                             <li><a href="haftungsausschluss.html"><span class="trigger">Haftungsausschluss</span></a></li>
                             <li><a href="datenschutz"><span class="trigger">Datenschutz</span></a></li>
