adjusted h2 size in some cases

--- a/index.html
+++ b/index.html
@@ -160,22 +160,22 @@
 						</div>
 						<div class="row">
 							<div class="span3">
-								<h2>Data Driven Commerce</h2>
+								<h2 style="font-size:0.95em">Data Driven Commerce</h2>
 								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung für eine zielorientierte und kanalübergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2>Konversion Optimierung</h2>
+								<h2 style="font-size:0.95em">Konversion Optimierung</h2>
 								<p>Konversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles daten getriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2>Application Management</h2>
+								<h2 style="font-size:0.95em">Application Management</h2>
 								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware als auch Ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-                                <h2>Go-to-Market Strategy</h2>
+                                <h2 style="font-size:0.95em">Go-to-Market Strategy</h2>
 								<p>Sie suchen einen kompetenten und verlässlichen Partner für den Vertrieb Ihrer Software-Lösungen im Europäischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie die langjährige Beziehungen zu Händlern und Agenturen bildet die Grundlage für den schnellen Vertriebserfolg während der Wachstumsphase.</p> 								
 							</div>
 						</div>
