some UI & UX changes
regarding headings and font size on different devices

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 							<div class="span4">
 								<!-- Start Services List -->
 								<div class="services">
-									<div class="services-title hidden-tablet"><h3>Kompetenzen</h3></div>
+									<div class="services-title hidden-tablet">Kompetenzen</div>
 									<ul class="services-list">
 										<li>Onsite Search & Navigation</li>
                                         <li>Konversion Optimierung</li>
@@ -148,7 +148,7 @@
                                         <li>Go-to-Market Strategy</li>
 										
 									</ul>
-                                    <div class="services-title hidden-tablet"><h3>Technologien</h3></div>
+                                    <div class="services-title hidden-tablet">Technologien</div>
 									<ul class="services-list">										
                                         <li>Guided Selling & Personalisierung</li>
                                         <li>Infrastruktur & Hosting</li>
@@ -212,7 +212,7 @@
                         Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span>
                     </div>
 					<hr>
-					<div class="lead"><h2 style="font-size:0.5em">Commerce-Experts - Die gebündelte Expertise aus mehr als 35 Jahren Erfahrung im datengetriebenen digitalen Handel.</h2></div>
+					<div class="lead"><h2 style="font-size:0.5em">Commerce-Experts | Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im datengetriebenen digitalen Handel.</h2></div>
 					<div class="row">
 						<!-- Start Profile -->
 						<div class="span4 profile">
