--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -10,11 +10,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700%7COpen+Sans:400,300,700' rel='stylesheet' type='text/css'/>	
 	<!-- Import CSS -->
-	<link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/layout.css" />
-    <link rel="stylesheet" href="css/shortcodes.css" />
-    <link rel="stylesheet" href="css/grid.css" />
-    <link rel="stylesheet" href="css/mediaqueries.css" />
+	<!-- Import CSS -->
+	<link rel="stylesheet" href="css/style.css" />
     
 	<!--[if lt IE 10]>
 		<link href= "css/ie.css" rel= "stylesheet" media= "all" />
@@ -89,16 +86,9 @@
 	<script src="js/jquery.sticky.min.js"></script><!-- Sticky Navigation -->
 	<script src="js/jquery.scrollTo.min.js"></script><!-- Smooth Scrolling -->
 	<script src="js/jquery.nav.min.js"></script><!-- One Page Navigation -->
-	<script src="js/selectnav.min.js"></script><!-- Mobile Navigation -->
-	<script src="js/jquery.flexslider.min.js"></script><!-- FlexSlider 2 -->
-	<script src="js/jquery.parallax-1.1.3.min.js"></script><!-- Parallax -->
-	<script src="js/jquery.isotope.min.js"></script><!-- Isotope Portfolio -->
-	<script src="js/mql.min.js"></script><!-- Isotope Fix -->
-	<script src="js/jquery.fancybox.pack.min.js"></script><!-- Fancybox -->
-	<script src="js/jquery.fancybox-media.min.js"></script><!-- Fancybox Media Helper -->
-    <script src="js/settings.js"></script> <!-- JS Options -->	
-    <!--<script src="js/jflickrfeed.js"></script>--> <!-- Flickr Feed -->
-	<!--<script src="js/contact.js"></script>--> <!-- Feedback form -->
+	<script src="js/selectnav.min.js"></script><!-- Mobile Navigation -->	
+	<script src="js/jquery.parallax-1.1.3.min.js"></script><!-- Parallax -->	
+    <script src="js/settings.js"></script> <!-- JS Options -->
 	
     <!-- Load Analytics
   	================================================== -->
