removed unnecessary js and compressed it

--- a/haftungsausschluss.html
+++ b/haftungsausschluss.html
@@ -88,7 +88,7 @@
 	<script src="js/jquery.nav.min.js"></script><!-- One Page Navigation -->
 	<script src="js/selectnav.min.js"></script><!-- Mobile Navigation -->	
 	<script src="js/jquery.parallax-1.1.3.min.js"></script><!-- Parallax -->	
-    <script src="js/settings.js"></script> <!-- JS Options -->
+    <script src="js/settings.min.js"></script> <!-- JS Options -->
 	
     <!-- Load Analytics
   	================================================== -->
