--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er da
 	<script src="js/jquery.nav.min.js"></script><!-- One Page Navigation -->
 	<script src="js/selectnav.min.js"></script><!-- Mobile Navigation -->	
 	<script src="js/jquery.parallax-1.1.3.min.js"></script><!-- Parallax -->	
-    <script src="js/settings.js"></script> <!-- JS Options -->	
+    <script src="js/settings.min.js"></script> <!-- JS Options -->	
     
     <!-- Load Analytics
   	================================================== -->
