made some minor test changes
fixed typos and Andy's description

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 									<div class="services-title hidden-tablet">Kompetenzen</div>
 									<ul class="services-list">
 										<li>Onsite Search & Navigation</li>
-                                        <li>Konversion Optimierung</li>
+                                        <li>Conversion Optimierung</li>
                                         <li>Application Management</li>
                                         <li>Go-to-Market Strategy</li>
 										
@@ -159,13 +159,13 @@
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
-								<h2 style="font-size:0.95em">Konversion Optimierung</h2>
-								<p>Konversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles daten getriebenes Testing systematisch zu optimieren.</p>
+								<h2 style="font-size:0.95em">Conversion Optimierung</h2>
+								<p>Conversion Optimierung wird immer wichtiger. Steigender Wettbewerbsdruck erfordert erprobte und effektive Methoden zur Optimierung von Websites und Onlineshops. Commerce Experts hilft Ihnen dabei Startseiten, Landing Pages, Produktseiten oder Kaufprozesse - durch sequentielles daten getriebenes Testing systematisch zu optimieren.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
 								<h2 style="font-size:0.95em">Application Management</h2>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware als auch Ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware und ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
@@ -244,10 +244,10 @@ Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er de
 						<div class="span4 profile">
 							<!-- <img src="img/team/profile3.jpg" alt="andreas wagner"> -->
 							<div class="profile-name">Andreas Wagner</div>
-							<div class="profile-job">Geschäftsführer & Data Scientist</div>
+							<div class="profile-job">Geschäftsführer & Big Data Scientist</div>
 							<div class="profile-desc">
 								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europäischen eCommerde Markt. <br>
-Als Geschäftsführer und Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut sämtliche Big Data Projekte.</p>
+Als Geschäftsführer und Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut sämtliche Big Data und Personalisierungs Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Andreas_Wagner79"><span class="socicon">l</span></a></li>
