--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Commerce-Experts | Data-Driven Multichannel E-Business</title>
 	<meta name="description" content="Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat.">
-	<meta name="author" content="Commerce Experts UG (haftungsbeschränkt)">
+	<meta name="author" content="Commerce Experts UG (haftungsbeschr&auml;nkt)">
     <meta name="keywords" content="Multichannel, Crosschannel, Omnichannel, Data-Driven, E-Commerce, Digitaler-Handel, E-Business, On-Site-Search, Guided Selling, Personalisierung, Recommendation-Engine, Pforzheim"/>
 	<meta name="HandheldFriendly" content="true"/>
     <meta name="robots" content="index, follow">
@@ -84,8 +84,8 @@
 			<div class="row">
 				<div class="span12">
 					<div id="slidecaption">
-						Ihre <span class="color-text">Experten</span> für den<span class="color-text"> digitalen Handel</span>
-						<div class="sub-caption"><h1>Für unsere Kunden & Partner ebnen wir Wege beim Einstieg, bei der Optimierung und während der Wachstumsphase im digitalen Multichannel Handel</h1></div>
+						Ihre <span class="color-text">Experten</span> f&uuml;r den<span class="color-text"> digitalen Handel</span>
+						<div class="sub-caption"><h1>F&uuml;r unsere Kunden & Partner ebnen wir Wege beim Einstieg, bei der Optimierung und w&auml;hrend der Wachstumsphase im digitalen Multichannel Handel</h1></div>
 						<a href="#about" class="btn white scroll-link">Erfahren Sie mehr</a>
 					</div>
 				</div>
@@ -123,8 +123,8 @@
 				<div class="row">
 					<div class="span12">
 						<div class="title">Was <span class="color-text">wir </span>tun</div>
-                        <div class="sub-caption"><h2>Commerce-Experts steht für qualitativ hochwertige datengetriebene Projekte mit hohem <br>Investitionsschutz für Ihren unternehmerischen Erfolg im digitalen Handel.</h2>
-                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenströmen aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanalübergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die gebündelt und aufbereitet werden müssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu ermöglichen.<br> Für den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den führenden Systemen im Markt und schafft so nachhaltig und unabhängig einen nachweislichen Mehrwert für Kunden und Partner.</p>
+                        <div class="sub-caption"><h2>Commerce-Experts steht f&uuml;r qualitativ hochwertige datengetriebene Projekte mit hohem <br>Investitionsschutz f&uuml;r Ihren unternehmerischen Erfolg im digitalen Handel.</h2>
+                        <p>Ein wesentliches Merkmal unserer Projekte ist die zentrale & integrierte Erfassung von Datenstr&ouml;men aus verschiedenen Quellen.<br> Erfolgreiche Projekte im digitalen Handel zeichnen sich durch stabile und performante Prozesse, kanal&uuml;bergreifende Datenstrukturen und eine hervorragende User Experience aus. Grundlage bilden eine Vielzahl an Datenpunkten, die geb&uuml;ndelt und aufbereitet werden m&uuml;ssen, um die Optimierung der Kundenansprache sowie personalisierte Marketingmaßnahmen zu erm&ouml;glichen.<br> F&uuml;r den erforderlichen Datenaustausch zwischen den Systemen entwickelt und supportet Commerce Experts mit seinem Datahub, Schnittstellen zu den f&uuml;hrenden Systemen im Markt und schafft so nachhaltig und unabh&auml;ngig einen nachweislichen Mehrwert f&uuml;r Kunden und Partner.</p>
                         </div><p></p>
 						
 						<div class="row slider-services">
@@ -155,7 +155,7 @@
 						<div class="row">
 							<div class="span3">
 								<h2 style="font-size:0.95em">Data Driven Commerce</h2>
-								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung für eine zielorientierte und kanalübergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
+								<p>Ein integriertes, datengetriebenes Commerce OS ist die Voraussetzung f&uuml;r eine zielorientierte und kanal&uuml;bergreifende Kundenansprache. Wir helfen Ihnen dabei Ihre Systeme ERP, Onsite Search & Navigation, Analytics, Guided Selling, Recommendation & Personalisierung mittels unseres eigens entwickleten Datahubs zu verbinden und sie integriert zu nutzen.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
@@ -165,12 +165,12 @@
 							</div>
 							<div class="span3">
 								<h2 style="font-size:0.95em">Application Management</h2>
-								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware und ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verfügbarkeiten, Sie entscheiden die Höhe Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
+								<p>Konzentrieren Sie sich auf die maßgeblichen Treiber Ihres Unternehmens und wir verantworten die Applikationen. Hardware und ihre Risiken sind unsere Kernkompetenzen. Wir minimieren das Risiko durch garantierte Verf&uuml;gbarkeiten, Sie entscheiden die H&ouml;he Ihres Service Levels und Ihre Admins kommunizieren mit unserem Supportteam.</p>
 								<hr class="gray margin20 visible-phone">
 							</div>
 							<div class="span3">
                                 <h2 style="font-size:0.95em">Go-to-Market Strategy</h2>
-								<p>Sie suchen einen kompetenten und verlässlichen Partner für den Vertrieb Ihrer Software-Lösungen im Europäischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie die langjährige Beziehungen zu Händlern und Agenturen bildet die Grundlage für den schnellen Vertriebserfolg während der Wachstumsphase.</p> 								
+								<p>Sie suchen einen kompetenten und verl&auml;sslichen Partner f&uuml;r den Vertrieb Ihrer Software-L&ouml;sungen im Europ&auml;ischen eCommerce Markt? Ein umfangreiches eCommerce Netzwerk sowie die langj&auml;hrige Beziehungen zu H&auml;ndlern und Agenturen bildet die Grundlage f&uuml;r den schnellen Vertriebserfolg w&auml;hrend der Wachstumsphase.</p> 								
 							</div>
 						</div>
 					</div>
@@ -188,7 +188,7 @@
 					<div class="span12">
 						<div class="vertical-text">
 							<div class="parallax-title">
-                                <h2>Mit viel Gespür für die Bedürfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
+                                <h2>Mit viel Gesp&uuml;r f&uuml;r die Bed&uuml;rfnisse unserer Kunden sowie einem ganzheitlichen Ansatz aus Consulting, Technologie und Application Management arbeiten wir an datengetriebenen E-Business-Projekten die begeistern</h2>
                             </div>
                         </div>
                     </div>
@@ -206,16 +206,16 @@
                         Das <span class="color-text">Team</span> <span class="profile-icons">&#0161;</span>
                     </div>
 					<hr>
-					<div class="lead"><h2 style="font-size:0.5em">Commerce-Experts | Gebündelte Expertise aus mehr als 35 Jahren Erfahrung im datengetriebenen digitalen Handel.</h2></div>
+					<div class="lead"><h2 style="font-size:0.5em">Commerce-Experts | Geb&uuml;ndelte Expertise aus &uuml;ber 35 Jahren Erfahrung im datengetriebenen digitalen Handel.</h2></div>
 					<div class="row">
 						<!-- Start Profile -->
 						<div class="span4 profile">
 							<!-- <img src="img/team/profile1.jpg" alt="siegfried schuele"> -->
-							<div class="profile-name">Siegfried Schüle</div>
-							<div class="profile-job">Geschäftsführer</div>
+							<div class="profile-name">Siegfried Sch&uuml;le</div>
+							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer</div>
 							<div class="profile-desc">
-								<p>Siegfried war lange Jahre Leiter Operations bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden im europäischen eCommerce Markt. Zuletzt war er mit seiner (cgi)² als unabhängiger eCommerce Berater für zahlreiche Retailer tätig.<br>
-Als Geschäftsführer bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
+								<p>Siegfried war lange Jahre Leiter Operations bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden im europ&auml;ischen eCommerce Markt. Zuletzt war er mit seiner (cgi)² als unabh&auml;ngiger E-Commerce Berater f&uuml;r zahlreiche Retailer t&auml;tig.<br>
+Als Gesch&auml;ftsf&uuml;hrer bei Commerce Experts verantwortet er den Bereich eCommerce Consulting.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Siegfried_Schuele"><span class="socicon">l</span></a></li>
@@ -227,10 +227,10 @@ Als Geschäftsführer bei Commerce Experts verantwortet er den Bereich eCommerce
 						<div class="span4 profile">
 							<!-- <img src="img/team/profile2.jpg" alt="mathias duda"> -->
 							<div class="profile-name">Mathias Duda</div>
-							<div class="profile-job">Geschäftsführer & Sales Director</div>
+							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Sales Director</div>
 							<div class="profile-desc">
-								<p>Mathias war zuletzt Vertriebsleiter bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden & Partner im europäischen eCommerce Markt. <br>
-Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
+								<p>Mathias war zuletzt Vertriebsleiter bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen und betreute mit seinem Team mehr als 1000 Kunden & Partner im europ&auml;ischen eCommerce Markt. <br>
+Als Gesch&auml;ftsf&uuml;hrer und Sales Director bei Commerce Experts verantwortet er den strategischen Vertrieb sowie das Partnermangement.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Mathias_Duda"><span class="socicon">l</span></a></li>
@@ -244,10 +244,10 @@ Als Geschäftsführer und Sales Director bei Commerce Experts verantwortet er de
 						<div class="span4 profile">
 							<!-- <img src="img/team/profile3.jpg" alt="andreas wagner"> -->
 							<div class="profile-name">Andreas Wagner</div>
-							<div class="profile-job">Geschäftsführer & Big Data Scientist</div>
+							<div class="profile-job">Gesch&auml;ftsf&uuml;hrer & Big Data Scientist</div>
 							<div class="profile-desc">
-								<p>Andreas war zuletzt Leiter Produktmanagement bei einem führenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europäischen eCommerde Markt. <br>
-Als Geschäftsführer und Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut sämtliche Big Data und Personalisierungs Projekte.</p>
+								<p>Andreas war zuletzt Leiter Produktmanagement bei einem f&uuml;hrenden internationalen Onsite-Conversion Technologie-Unternehmen mit mehr als 1000 Kunden & Partnern im europ&auml;ischen eCommerde Markt. <br>
+Als Gesch&auml;ftsf&uuml;hrer und Big Data Scientist bei Commerce Experts verantwortet er das Business Development und betreut s&auml;mtliche Big Data und Personalisierungs Projekte.</p>
 							</div>
 							<ul class="profile-social-icons">
 								<li><a href="https://www.xing.com/profile/Andreas_Wagner79"><span class="socicon">l</span></a></li>
@@ -271,13 +271,13 @@ Als Geschäftsführer und Big Data Scientist bei Commerce Experts verantwortet e
 					<div class="span12">
 						<div class="title center-title">Sprechen <span class="color-text">Sie</span> uns an <span class="profile-icons">&#0081;</span></div>
 						<hr>
-						<div class="lead">Wir freuen uns über Ihren Anruf oder eine Nachricht an uns.</div>
+						<div class="lead">Wir freuen uns &uuml;ber Ihren Anruf oder eine Nachricht an uns.</div>
 						<div class="row">
 							<div class="span8">
 								<div id="googleMap" style="width:100%;height:380px;"></div>	    
 							</div>
 							<div class="span4 address">
-								<div class="contact-name">Commerce Experts UG (haftungsbeschränkt)</div>
+								<div class="contact-name">Commerce Experts UG (haftungsbeschr&auml;nkt)</div>
 								<span class="profile-icons">&#0117;</span><h6> Standort</h6>
 								<p>Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</p>
 								<span class="profile-icons">&#0056;</span><h6> E-mail</h6><p>info[at]commerce-experts.com<br></p>
@@ -339,8 +339,8 @@ Als Geschäftsführer und Big Data Scientist bei Commerce Experts verantwortet e
 						<strong>Standort:</strong> <span class="white-text">Apartment 3 - Schulerstrasse 2 - 75180 Pforzheim</span></p>
 					</div>
 					<div class="span4">
-						<h5>Über Commerce-Experts</h5>
-						<p>Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das Rückgrat einer erfolgreichen E-Business Lösung.</p>
+						<h5>&Uuml;ber Commerce-Experts</h5>
+						<p>Die Commerce-Experts UG ist ein Technologieberatungs- & Softwarehaus, dass sich auf die Optimierung komplexer datengetriebener Multichannel Projekte im digitalen Handel spezialisiert hat. Technologische Perfektion und datengetriebene Entscheidungen sind das R&uuml;ckgrat einer erfolgreichen E-Business L&ouml;sung.</p>
 					</div>
                     <div class="span4">
 						<h5>Links</h5>
@@ -356,7 +356,7 @@ Als Geschäftsführer und Big Data Scientist bei Commerce Experts verantwortet e
 		</section>
 		<!-- End Sidebar -->
 		<div id="copyright">
-			© 2014<br>Commerce Experts UG (haftungsbeschränkt) i.G.
+			© 2014<br>Commerce Experts UG (haftungsbeschr&auml;nkt) i.G.
 		</div>
 	</div>
     <!-- End Wrapper for Content -->
